[gd_scene load_steps=45 format=2]

[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/07-Attack/Attack 01.png" type="Texture" id=1]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/02-Run/Run 04.png" type="Texture" id=2]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/07-Attack/Attack 02.png" type="Texture" id=3]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/02-Run/Run 06.png" type="Texture" id=4]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/06-Anticipation/Anticipation 02.png" type="Texture" id=5]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/06-Anticipation/Anticipation 03.png" type="Texture" id=6]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/07-Attack/Attack 03.png" type="Texture" id=7]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/02-Run/Run 05.png" type="Texture" id=8]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/06-Anticipation/Anticipation 01.png" type="Texture" id=9]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/07-Attack/Attack 04.png" type="Texture" id=10]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 03.png" type="Texture" id=11]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 04.png" type="Texture" id=12]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 09.png" type="Texture" id=13]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 01.png" type="Texture" id=14]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 06.png" type="Texture" id=15]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/02-Run/Run 01.png" type="Texture" id=16]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 07.png" type="Texture" id=17]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 05.png" type="Texture" id=18]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 08.png" type="Texture" id=19]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/02-Run/Run 02.png" type="Texture" id=20]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/02-Run/Run 03.png" type="Texture" id=21]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/01-Idle/Idle 02.png" type="Texture" id=22]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/08-Hit/Hit 02.png" type="Texture" id=23]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/10-Dead Ground/Dead Ground 01.png" type="Texture" id=24]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/08-Hit/Hit 01.png" type="Texture" id=25]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/08-Hit/Hit 03.png" type="Texture" id=26]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/10-Dead Ground/Dead Ground 02.png" type="Texture" id=27]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/08-Hit/Hit 04.png" type="Texture" id=28]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/10-Dead Ground/Dead Ground 03.png" type="Texture" id=29]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/10-Dead Ground/Dead Ground 04.png" type="Texture" id=30]
[ext_resource path="res://Karakter/Crabby.gd" type="Script" id=31]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/04-Fall/Fall 01.png" type="Texture" id=32]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/03-Jump/Jump 01.png" type="Texture" id=33]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/03-Jump/Jump 02.png" type="Texture" id=34]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/03-Jump/Jump 03.png" type="Texture" id=35]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/09-Dead Hit/Dead Hit 03.png" type="Texture" id=36]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/09-Dead Hit/Dead Hit 04.png" type="Texture" id=37]
[ext_resource path="res://assets/The Crusty Crew/Sprites/Crabby/09-Dead Hit/Dead Hit 02.png" type="Texture" id=38]

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 22 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 18 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 19 ), ExtResource( 13 ) ],
"loop": true,
"name": "idle",
"speed": 12.0
}, {
"frames": [ ExtResource( 38 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 24 ), ExtResource( 27 ), ExtResource( 29 ), ExtResource( 30 ) ],
"loop": true,
"name": "mati",
"speed": 10.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 7 ), ExtResource( 10 ) ],
"loop": false,
"name": "attack",
"speed": 10.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 23 ), ExtResource( 26 ), ExtResource( 28 ) ],
"loop": true,
"name": "hit",
"speed": 10.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "anticipation",
"speed": 10.0
}, {
"frames": [ ExtResource( 32 ) ],
"loop": true,
"name": "jatuh",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 2 ), ExtResource( 8 ), ExtResource( 4 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11, 11.5 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 31, 6 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 10, 2.5 )

[sub_resource type="CircleShape2D" id=14]
radius = 8.0

[sub_resource type="Animation" id=16]
resource_name = "menghilang"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="Crabby" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 23
script = ExtResource( 31 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 15 )
animation = "idle"
frame = 4
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 1.5 )
shape = SubResource( 1 )

[node name="Pivot" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="Pivot"]
position = Vector2( -15, 3 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 2

[node name="DeteksiSamping" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeteksiSamping"]
position = Vector2( 3, 5 )
shape = SubResource( 12 )

[node name="DeteksiAtas" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeteksiAtas"]
position = Vector2( 1, -9 )
shape = SubResource( 13 )

[node name="PlayerDetektor" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetektor"]
position = Vector2( -24, 4 )
shape = SubResource( 14 )

[node name="PlayerDetektor2" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetektor2"]
position = Vector2( 28, 4 )
shape = SubResource( 14 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/menghilang = SubResource( 16 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="DeteksiSamping" to="." method="_on_DeteksiSamping_area_entered"]
[connection signal="body_entered" from="DeteksiSamping" to="." method="_on_DeteksiSamping_body_entered"]
[connection signal="body_entered" from="DeteksiAtas" to="." method="_on_DeteksiAtas_body_entered"]
[connection signal="body_entered" from="PlayerDetektor" to="." method="_on_PlayerDetektor_body_entered"]
[connection signal="body_entered" from="PlayerDetektor2" to="." method="_on_PlayerDetektor_body_entered"]
